--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import './modules/variables.scss';
 @import './modules/base.scss';
 @import './modules/default.scss';
+@import './modules/controls.scss';
 @import './modules/ui.scss';
 @import './modules/filters.scss';
 @import './modules/menu.scss';
