--- a/src/styles/modules/menu.scss
+++ b/src/styles/modules/menu.scss
@@ -9,6 +9,7 @@
   z-index: 9999;
   display: flex;
   align-items: center;
+  opacity: 0;
 }
 
 .menu__container {
@@ -19,23 +20,25 @@
   padding: 1rem 1.5rem;
   box-sizing: border-box;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
 .menu__logo {
   margin: 0;
   color: $purpleDefault;
-  font-size: 1.4rem;
+  font-size: 1.8rem;
   font-family: rift-soft, sans-serif;
   font-weight: 700;
   font-style: normal;
+  cursor: pointer;
   span {
     font-family: 'Roboto Mono', monospace;
     font-weight: 400;
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     color: $white;
     vertical-align: middle;
+    display: inline-block;
   }
 }
 
