--- a/src/styles/modules/ui.scss
+++ b/src/styles/modules/ui.scss
@@ -4,6 +4,7 @@ nav {
   bottom: 0;
   width: 100vw;
   z-index: 999999;
+  opacity: 0;
 }
 
 //
@@ -13,14 +14,46 @@ nav {
 .ui__btn {
   position: absolute;
   bottom: 0;
-  width: 15vw;
+  width: 10vw;
   height: 100vh;
-  z-index: 999999;
+  z-index: 99999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: default;
   &--left {
     left: 0;
+    pointer-events: none;
+    transform: rotate(180deg);
+    .ui__btn__container {
+      opacity: 0;
+    }
   }
   &--right {
     right: 0;
+  }
+}
+
+.ui__btn__container {
+  background-color: $white;
+  width: 6rem;
+  height: 6rem;
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  filter: drop-shadow(0rem 0rem 2rem rgba($color: #000000, $alpha: 0.25));
+  cursor: pointer;
+  transition: 0.25s;
+  span {
+    color: $darkBlue;
+    font-size: 4.8rem;
+  }
+  &:hover {
+    background-color: hsl(252, 66%, 90%);
+  }
+  @media only screen and (max-width: 768px) {
+    display: none;
   }
 }
 
@@ -34,8 +67,8 @@ nav {
   bottom: 0;
   left: 0;
   box-sizing: border-box;
-  height: 21rem;
-  z-index: 999;
+  height: 15rem;
+  z-index: 999999;
 }
 
 .ui__names__container {
@@ -45,7 +78,7 @@ nav {
   top: 0;
   height: 100%;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: 7.5vw;
   padding: 0vw 15vw;
   box-sizing: border-box;
@@ -63,6 +96,7 @@ nav {
   justify-content: center;
   &--active {
     min-height: 7.5rem;
+    transform: translateY(-0.75rem);
   }
 }
 
@@ -121,10 +155,7 @@ nav {
   height: 100%;
   background-color: $purpleDefault;
   border-radius: 1rem;
-  &--active {
-    filter: drop-shadow(0rem 0rem 10rem rgba($color: #000000, $alpha: 1));
-    z-index: 99;
-  }
+  box-shadow: rgb(0 0 0 / 0%) 0rem 0rem 10rem;
 }
 
 .ui__names__name__content__container {
@@ -133,8 +164,8 @@ nav {
   /* top: 50%; */
   bottom: 0;
   height: 90%;
-  width: 100%;
-  padding: 0 10%;
+  width: 55rem;
+  padding: 10rem 0;
   box-sizing: border-box;
   transform: translateX(-50%);
   display: none;
@@ -142,8 +173,46 @@ nav {
   overflow-y: scroll;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+  opacity: 0;
   &::-webkit-scrollbar {
     display: none;
+  }
+  h1 {
+    color: $white;
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 700;
+    font-size: 2.4rem;
+    text-align: center;
+  }
+  p {
+    color: $white;
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 400;
+    font-size: 1.7rem;
+    line-height: 2.6rem;
+  }
+  .source {
+    font-size: 1.4rem;
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 400;
+  }
+  a {
+    color: $darkBlue;
+  }
+  img {
+    width: 30rem;
+    height: 20rem;
+    object-fit: cover;
+    margin: 3rem auto;
+    border-radius: 1rem;
+    transform: rotate(-5deg);
+    @media only screen and (max-width: 1200px) {
+      width: 28rem;
+      height: 19rem;
+    }
+  }
+  @media only screen and (max-width: 678px) {
+    width: 30rem;
   }
 }
 
@@ -176,6 +245,7 @@ nav {
   &--bottom {
     bottom: 0;
     background: linear-gradient(0deg, rgba(112, 90, 201, 1) 0%, rgba(112, 90, 201, 0) 100%);
+    border-radius: 1rem;
   }
 }
 
@@ -214,6 +284,7 @@ nav {
   align-items: center;
   flex-direction: column;
   gap: 1rem;
+  white-space: nowrap;
   &--active {
     .ui__years__year__value {
       font-size: 1.8rem;
