--- a/src/styles/modules/controls.scss
+++ b/src/styles/modules/controls.scss
@@ -11,11 +11,15 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 5rem;
+  @media only screen and (max-height: 736px) {
+    gap: 2rem;
+  }
 }
 
 .controls__logo {
@@ -42,11 +46,14 @@
 
 .controls__text {
   color: $white;
-  width: 25rem;
+  width: 50rem;
   text-align: center;
   font-family: 'Roboto Mono', monospace;
   font-weight: 700;
   font-size: 1.8rem;
+  @media only screen and (max-width: 769px) {
+    width: 25rem;
+  }
 }
 
 .controls__button {
@@ -78,6 +85,30 @@
   bottom: 2rem;
   right: 2rem;
   opacity: 0;
+}
+
+.controls__loading__text {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  color: #fff;
+  text-align: center;
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 700;
+  font-size: 1.8rem;
+  pointer-events: none;
+  opacity: 0;
+  .material-symbols-outlined {
+    font-size: 3.5rem;
+    margin-bottom: 2rem;
+  }
+  .hint {
+    font-size: 1.2rem;
+    font-weight: 400;
+    opacity: 0.6;
+  }
 }
 
 //
