--- a/src/styles/modules/controls.scss
+++ b/src/styles/modules/controls.scss
@@ -111,6 +111,48 @@
   }
 }
 
+.controls__loading__video {
+  position: absolute;
+  left: 50%;
+  top: -24rem;
+  min-width: 18rem;
+  min-height: 18rem;
+  max-width: 18rem;
+  max-height: 18rem;
+  border-radius: 1rem;
+  transform: translateX(-50%) rotate(-5deg);
+  border: 0.1rem solid $white;
+  video {
+    width: 100% !important;
+    height: 100% !important;
+  }
+  &::after {
+    content: 'Example';
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -3rem;
+    background-color: $darkBlue;
+    display: inline-block;
+    padding: 1rem 1.5rem;
+    border-radius: 1rem;
+    color: #fff;
+    text-align: center;
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 700;
+    font-size: 1.8rem;
+  }
+}
+
+.controls__loading__video__label {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding: 2rem;
+  background-color: $darkBlue;
+  border-radius: 1rem;
+}
+
 //
 // LOADING
 //
